Everything works here

--- a/surveyorData/Info.plist
+++ b/surveyorData/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>&quot;To export photos from your samples&quot;</string>
 	<key>CFBundleDocumentTypes</key>
 	<array>
 		<dict>
@@ -30,9 +32,9 @@
 	<key>LSSupportsOpeningDocumentsInPlace</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>"We need to add photos to your surveys"</string>
+	<string>&quot;We need to add photos to your surveys&quot;</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>"We use it to store locations of samples in your survey"</string>
+	<string>&quot;We use it to store locations of samples in your survey&quot;</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
